03-gitops/apps/04-ci-cd/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ui
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: ingress
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
  tls:
    - hosts:
        - jenkins.cluster
      secretName: jenkins-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-public-ui
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: ingress
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.serhii.link/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.serhii.link/oauth2/start?rd=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.serhii.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
  tls:
    - hosts:
        - jenkins.cluster
      secretName: jenkins-tls
